[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/images/sheets/icons2.png" type="Texture" id=1]
[ext_resource path="res://src/battle/EDebuffUI.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="EDebuffUI" type="Button"]
margin_right = 15.0
margin_bottom = 11.0
rect_min_size = Vector2( 15, 8 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.145098, 0.145098, 0.133333, 1 )
position = Vector2( 4, 0 )
texture = ExtResource( 1 )
centered = false
hframes = 10
vframes = 30
frame = 102

[node name="StacksShadow" type="Label" parent="."]
margin_left = -9.0
margin_top = -2.0
margin_right = 9.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0.145098, 0.145098, 0.133333, 1 )
text = "11"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stacks" type="Label" parent="."]
margin_left = -8.0
margin_top = -2.0
margin_right = 10.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0.792157, 0.780392, 0.721569, 1 )
custom_colors/font_color_shadow = Color( 0.145098, 0.145098, 0.133333, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "11"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="." to="." method="_on_Button_down"]
[connection signal="button_up" from="." to="." method="_on_Button_up"]
